Restructured image effects.